--- a/.github/workflows/package-and-publish.yml
+++ b/.github/workflows/package-and-publish.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           cd 'works/downloads'
           echo TAG=$(date '+v%Y%m%d-%H%M%S') >> $GITHUB_ENV
-          echo BODY=$(echo -e "`ls hekate_ctcaer_*.zip`<br/>`ls atmosphere-*.zip`") >> $GITHUB_ENV
+          echo BODY=$(echo -e "`ls hekate_ctcaer_*.zip`<br/>`ls atmosphere-*.zip`<br/>`ls DBI.*.nro`") >> $GITHUB_ENV
           echo PRERELEASE=$(if [[ `ls atmosphere-*.zip` =~ 'prerelease' ]]; then echo true; else echo false; fi ) >> GITHUB_ENV
 
       - name: publish
